<resources xmlns:xliff="http://schemas.android.com/apk/res/android">
    <string name="app_name">Clear Skies</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello World!</string>
    <string name="action_refresh">Refresh</string>
    <string name="title_activity_detail">DetailActivity</string>

    <!-- Label for the location preference [CHAR LIMIT=30] -->
    <string name="pref_gps_label">Location</string>
    <string name="pref_gps_key" translatable="false">location</string>
    <string name="pref_gps_default" translatable="false">94043</string>

    <string name="pref_time_picker_label">Checking Time</string>
    <string name="pref_time_picker_key">timePicker</string>
    <string name="pref_time_picker_default">20:00</string>

    <!-- Label for the aurora preference [CHAR LIMIT=30] -->
    <string name="pref_aurora_label"> Aurora</string>
    <string name="pref_aurora_key" translatable="false">aurora</string>
    <string name="pref_aurora_default">true</string>

    <!-- Label for the ISS preference [CHAR LIMIT=30] -->
    <string name="pref_ISS_label"> International Space Station</string>
    <string name="pref_ISS_key" translatable="false">iss</string>
    <string name="pref_ISS_default">true</string>

    <string name="pref_cancel_key">cancel</string>
    <string name="pref_cancel_label">Cancel Clear Skies Service</string>

    <string name="pref_demo_label">Demo</string>
    <string name="pref_demo_key" translatable="false">demo</string>
    <string name="pref_demo_default">false</string>


    <!-- Date label when displaying today's weather forecast [CHAR LIMIT=20] -->
    <string name="today">Today</string>

    <!-- Date label when displaying tomorrow's weather forecast [CHAR LIMIT=20] -->
    <string name="tomorrow">Tomorrow</string>

    <string name="nextUpdate">Next Update</string>

    <!-- Date format for displaying day of week and date (i.e. Mon Jun 1) [CHAR LIMIT=20] -->
    <string name="format_full_friendly_date"><xliff:g id="day">%1$s</xliff:g>, <xliff:g id="date">%2$s</xliff:g></string>

</resources>

