<?xml version="1.0" encoding="utf-8"?>


<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <PreferenceCategory
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/pref_title_define_alarm" >

        <Preference
            android:key="@string/pref_time_picker_key"
            android:title="@string/pref_time_picker_label"
            android:summary="@string/pref_time_picker_default"
            android:defaultValue="@string/pref_time_picker_default"
            android:icon="@drawable/ic_alarm_black_24dp">

        </Preference>

    </PreferenceCategory>


    <PreferenceCategory
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/pref_title_define_location" >

        <ListPreference
            android:key="@string/pref_gps_key"
            android:title="@string/pref_gps_label"
            android:defaultValue="-1"
            android:entries="@array/pref_gps_list_titles"
            android:entryValues="@array/pref_gps_list_values"
            android:negativeButtonText="@null"
            android:positiveButtonText="@null"
            android:icon="@drawable/ic_map_black_24dp"/>

    </PreferenceCategory>

    <PreferenceCategory
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/pref_title_define_events" >

        <CheckBoxPreference
            android:key="@string/pref_aurora_key"
            android:title="@string/pref_aurora_label"
            android:defaultValue="@string/pref_aurora_default"
            />

        <CheckBoxPreference
            android:key="@string/pref_ISS_key"
            android:title="@string/pref_ISS_label"
            android:defaultValue="@string/pref_ISS_default" />

    </PreferenceCategory>

    <PreferenceCategory
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/pref_title_define_other" >

        <Preference
            android:key="@string/pref_cancel_key"
            android:title="@string/pref_cancel_label">

        </Preference>

    </PreferenceCategory>

    <PreferenceCategory
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:title="@string/pref_title_demo" >

        <CheckBoxPreference
            android:key="@string/pref_demo_key"
            android:title="@string/pref_demo_label"
            android:defaultValue="@string/pref_demo_default"
            />

    </PreferenceCategory>

</PreferenceScreen>
